--- a/styles.css
+++ b/styles.css
@@ -9,9 +9,9 @@
 }
 
 body {
-  width: 90%;
   margin: auto;
   border: 1px solid black;
+  margin-bottom: 30px;
 }
 
 header {
@@ -24,4 +24,80 @@ header {
 h1 {
   font-weight: 500;
   font-size: 2rem;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  border: 2px solid black;
+  margin: 20px;
+}
+
+.card ul {
+  display: flex;
+  list-style-type: none;
+  position: absolute;
+  left: 5px;
+  bottom: 5px;
+  gap: 3px;
+}
+
+.card ul li button {
+  padding: 3px;
+  border-radius: 10px;
+  border-width: 1px;
+  background-color: white;
+}
+
+.question {
+  margin: 20px;
+}
+
+.AnswerButton {
+  margin: 20px 20px 50px 20px;
+  padding: 5px;
+  background-color: rgb(194, 238, 252);
+}
+
+.bookmark {
+  width: 60px;
+  position: absolute;
+  top: -20px;
+  right: -10px;
+}
+
+.answer {
+  margin: 0px 20px 50px 20px;
+}
+
+.bookmarkTwo {
+  width: 40px;
+  position: absolute;
+  top: -8px;
+  right: 0px;
+}
+
+footer {
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+  background-color: lightblue;
+}
+
+nav {
+  display: flex;
+  bottom: 0;
+  justify-content: space-around;
+  margin: 10px;
+}
+
+nav a {
+  text-decoration: none;
+  color: black;
+}
+
+nav a:hover {
+  text-decoration: underline;
 }
