--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body {
 header {
   display: flex;
   justify-content: center;
-  background-color: rgb(102, 212, 249);
+  background-color: #1c6e8c;
   padding: 15px;
 }
 
@@ -33,6 +33,7 @@ h1 {
   position: relative;
   border: 2px solid black;
   margin: 20px;
+  border-radius: 5px;
 }
 
 .card ul {
@@ -58,7 +59,9 @@ h1 {
 .AnswerButton {
   margin: 20px 20px 50px 20px;
   padding: 5px;
-  background-color: rgb(194, 238, 252);
+  background-color: #274156;
+  color: #fbfcff;
+  border-radius: 5px;
 }
 
 .bookmark {
