--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@
 body {
   margin: auto;
   border: 1px solid black;
-  margin-bottom: 30px;
+  margin-bottom: 60px;
   background-color: #fbfcff;
 }
 
@@ -104,12 +104,23 @@ nav {
   margin: 10px;
 }
 
-nav a {
-  text-decoration: none;
-  color: #fbfcff;
-}
-
 nav a:hover {
   text-decoration: underline;
   color: #605856;
+}
+
+.questionSite {
+  width: 35px;
+  margin: 5px;
+}
+
+.bookmarkSite {
+  width: 45px;
+  border: 3px solid #fbfcff;
+  border-radius: 30%;
+}
+
+.profileSite {
+  width: 35px;
+  margin: 5px;
 }
