--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import "./components/card.css";
+@import "./components/quizcard.css";
 @import "./components/navigation.css";
 @import "./components/global.css";
 
