--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,8 @@
-*,
-::after,
-::before {
-  box-sizing: border-box;
-  font-family: sans-serif;
-  margin: 0;
-  padding: 0;
-  /*  */
-}
+@import "./components/quizcard.css";
+@import "./components/navigation.css";
+@import "./components/global.css";
 
-body {
-  margin: auto;
-  border: 1px solid black;
-  margin-bottom: 60px;
-  background-color: #fbfcff;
-}
-
-header {
+.header {
   display: flex;
   justify-content: center;
   background-color: #1c6e8c;
@@ -26,101 +13,4 @@ h1 {
   font-weight: 500;
   font-size: 2rem;
   color: #fbfcff;
-}
-
-.card {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  position: relative;
-  border: 2px solid black;
-  margin: 20px;
-  border-radius: 5px;
-}
-
-.card ul {
-  display: flex;
-  list-style-type: none;
-  position: absolute;
-  left: 5px;
-  bottom: 5px;
-  gap: 3px;
-}
-
-.card ul li button {
-  padding: 3px;
-  border-radius: 10px;
-  border-width: 1px;
-  background-color: #d0ccd0;
-}
-
-.question {
-  margin: 20px;
-}
-
-.AnswerButton {
-  margin: 20px 20px 50px 20px;
-  padding: 5px;
-  background-color: #274156;
-  color: #fbfcff;
-  border-radius: 5px;
-}
-
-.AnswerButton:hover {
-  cursor: pointer;
-  background-color: #fbfcff;
-  color: #274156;
-}
-
-.bookmark {
-  width: 60px;
-  position: absolute;
-  top: -20px;
-  right: -10px;
-}
-
-.answer {
-  margin: 0px 20px 50px 20px;
-}
-
-.bookmarkTwo {
-  width: 40px;
-  position: absolute;
-  top: -8px;
-  right: 0px;
-}
-
-footer {
-  position: fixed;
-  width: 100%;
-  bottom: 0;
-  background-color: #1c6e8c;
-}
-
-nav {
-  display: flex;
-  bottom: 0;
-  justify-content: space-around;
-  margin: 10px;
-}
-
-nav a:hover {
-  text-decoration: underline;
-  color: #605856;
-}
-
-.questionSite {
-  width: 35px;
-  margin: 5px;
-}
-
-.bookmarkSite {
-  width: 45px;
-  border: 3px solid #fbfcff;
-  border-radius: 30%;
-}
-
-.profileSite {
-  width: 35px;
-  margin: 5px;
 }
