--- a/components/navigation.css
+++ b/components/navigation.css
@@ -18,27 +18,28 @@ footer {
 }
 
 .navigation__QuestionSite {
-  width: 35px;
+  width: 30px;
   margin: 5px;
 }
 
 .navigation__QuestionSite--highlighted {
-  width: 45px;
-  border: 3px solid #fbfcff;
-  border-radius: 30%;
+  border: 2px solid white;
+  border-radius: 20px;
+  width: 35px;
 }
 
 .navigation__BookmarkSite {
-  width: 45px;
+  width: 20px;
+  margin: 5px;
 }
 
 .navigation__BookmarkSite--highlighted {
-  width: 45px;
-  border: 3px solid #fbfcff;
-  border-radius: 30%;
+  border: 2px solid white;
+  width: 25px;
+  margin: 3px;
 }
 
 .navigation__ProfileSite {
-  width: 35px;
+  width: 25px;
   margin: 5px;
 }
