--- a/components/profile.css
+++ b/components/profile.css
@@ -14,12 +14,17 @@ h2 {
   width: 150px;
   height: 150px;
   border-radius: 50%;
-  margin-top: 50px;
-  margin-left: 30px;
-  margin-bottom: 50px;
-  margin-right: 20px;
+  margin: 20px 30px 20px 20px;
 }
 
 .profile__stats {
   line-height: 30px;
+}
+
+.quote {
+  margin: 20px;
+}
+
+.inspiration {
+  text-decoration: underline;
 }
