--- a/components/navigation.css
+++ b/components/navigation.css
@@ -46,8 +46,9 @@ footer {
 
 .navigation__newCardSite--highlighted {
   border: 2px solid white;
-  border-radius: 20px;
-  width: 35px;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
 }
 
 .navigation__ProfileSite {
