--- a/components/quizcard.css
+++ b/components/quizcard.css
@@ -42,39 +42,27 @@
   color: #274156;
 }
 
-.quizcard__bookmarkUnfilled {
-  border: none;
-}
-
-.quizcard__bookmarkUnfilled:hover {
-  cursor: pointer;
-}
-
-.quizcard__bookmarkFilled {
-  width: 40px;
-  position: absolute;
-  top: -8px;
-  right: 0px;
-}
-
 .quizcard__answer-open {
   margin: 0px 20px 50px 20px;
-}
-
-.quizcard__bookmarkUnfilled {
-  width: 40px;
-  position: absolute;
-  top: -8px;
-  right: 0px;
 }
 
 .revealAnswer {
   display: none;
 }
 
-.fa-bookmark {
-  font-size: 2rem;
+.bookmark {
   position: absolute;
   top: -8px;
-  right: 0px;
+  right: 5px;
+  width: 25px;
+  border: none;
+  background-color: transparent;
+}
+
+.bookmark:hover {
+  cursor: pointer;
+}
+
+.hidden {
+  display: none;
 }
