--- a/components/quizcard.css
+++ b/components/quizcard.css
@@ -19,9 +19,10 @@
 
 .quizcard__tag-item {
   padding: 1px;
-  border-radius: 10px;
+  border-radius: 5px;
   border-width: 1px;
-  background-color: #d0ccd0;
+  background-color: #e7e6e7;
+  padding: 2px;
 }
 
 .quizcard__question {
@@ -57,8 +58,12 @@
   right: 0px;
 }
 
-.quizcard__answer-open {
+.quizcard__answer {
   margin: 0px 20px 50px 20px;
+}
+
+.quizcard__answer-hide {
+  display: none;
 }
 
 .quizcard__bookmarkUnfilled {
@@ -66,10 +71,6 @@
   position: absolute;
   top: -8px;
   right: 0px;
-}
-
-.revealAnswer {
-  display: none;
 }
 
 .fa-bookmark {
