--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,5 @@
 @import "./components/navigation.css";
 @import "./components/global.css";
 @import "./components/profile.css";
+@import "./components/form.css";
+@import "./components/bookmark.css";
